--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "node, mongodb",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./index"
+    "dev": "nodemon ./index",
+    "start": "concurrently \"npm run dev\" \"npm run watch\" ",
+    "watch": "webpack --w --mode development"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "concurrently": "^5.0.0",
     "connect-mongo": "^3.1.0",
     "cookie-parser": "^1.4.4",
     "dotenv": "^8.2.0",
@@ -21,6 +24,11 @@
     "slug": "^1.1.0"
   },
   "devDependencies": {
-    "nodemon": "^1.19.4"
+    "@babel/core": "^7.6.4",
+    "@babel/preset-env": "^7.6.3",
+    "babel-loader": "^8.0.6",
+    "nodemon": "^1.19.4",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.9"
   }
 }
