--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "concurrently": "^5.0.0",
+    "connect-flash": "^0.1.1",
     "connect-mongo": "^3.1.0",
     "cookie-parser": "^1.4.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "express-session": "^1.17.0",
+    "express-validator": "^6.2.0",
     "mongoose": "^5.7.6",
     "session": "^0.1.0",
     "shortid": "^2.2.15",
