--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
     "concurrently": "^5.0.0",
     "connect-flash": "^0.1.1",
@@ -22,9 +23,12 @@
     "express-session": "^1.17.0",
     "express-validator": "^6.2.0",
     "mongoose": "^5.7.6",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "session": "^0.1.0",
     "shortid": "^2.2.15",
-    "slug": "^1.1.0"
+    "slug": "^1.1.0",
+    "sweetalert2": "^8.18.6"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
