--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-session": "^1.17.0",
     "express-validator": "^6.2.0",
     "mongoose": "^5.7.6",
+    "multer": "^1.4.2",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "session": "^0.1.0",
