--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "express-validator": "^6.2.0",
     "mongoose": "^5.7.6",
     "multer": "^1.4.2",
+    "nodemailer": "^6.3.1",
+    "nodemailer-express-handlebars": "^3.1.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "session": "^0.1.0",
