--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-handlebars": "^3.1.0",
     "express-session": "^1.17.0",
     "express-validator": "^6.2.0",
+    "http-errors": "^1.7.3",
     "mongoose": "^5.7.6",
     "multer": "^1.4.2",
     "nodemailer": "^6.3.1",
